--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>ThunderBound is your ultimate digital universe, controlling and managing over 50 premium websites and platforms. From gaming to editing, from community hubs to creative spaces, we're your one-stop destination for everything digital.</p>
-                    <p>Our vast network of platforms serves millions of users worldwide, offering diverse experiences and opportunities across multiple digital domains.</p>
+                    <p>Our vast Minecraft Public Server Going to beat Hypixel and will be the world's best minecraft from Lifesteal,elements to All MiniGames including of 1.8.9-1.21 Games!</p>
                 </div>
                 <div class="about-stats">
                     <div class="stat-item">
@@ -65,8 +65,8 @@
                     </div>
                     <div class="stat-item">
                         <i class="fas fa-server"></i>
-                        <span class="stat-number">100+</span>
-                        <span class="stat-label">Services</span>
+                        <span class="stat-number">Achieving</span>
+                        <span class="stat-label">BestMinecraftServer</span>
                     </div>
                 </div>
             </div>
